--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.9.5
 django-cors-headers==1.1.0
 django-redis-sessions==0.5.0
 django-websocket-redis==0.4.6
+django-widget-tweaks==1.4.1
 djangorestframework==3.3.3
 drf-nested-routers==0.11.1
 gevent==1.1.1
