wsgi standalone for ws example

--- a/configs/sensait_ws.ini
+++ b/configs/sensait_ws.ini
@@ -16,4 +16,7 @@ http-socket = %(base)/%(project)/%(project)_ws.sock
 chmod-socket = 666
 vacuum = true
 
-# uwsgi --virtualenv /home/manto/.venvs/sensait --http-socket /home/manto/sensait/sensait_ws.sock --gevent 1000 --http-websockets --workers=2 --master --module ardsensor.wsgi_websocket
+# uwsgi --virtualenv /home/manto/.venvs/sensait
+#     --http-socket /home/manto/sensait/sensait_ws.sock
+#     --gevent 1000 --http-websockets --workers=2 --master
+#     --module ardsensor.wsgi_websocket
