Supervisor bash command

--- a/configs/supervisor/daphne.conf
+++ b/configs/supervisor/daphne.conf
@@ -1,5 +1,5 @@
 [program:daphne]
-command = /home/manto/sensait/sensait_django/configs/supervicosr/daphne  ; Command to start app
+command = /bin/bash /home/manto/sensait/sensait_django/configs/supervisor/daphne  ; Command to start app
 user = manto                                                             ; User to run as
 stdout_logfile = /home/manto/sensait/logs/daphne_supervisor.log          ; Where to write log messages
 redirect_stderr = true                                                   ; Save stderr in the same log
