--- a/configs/supervisor/worker.conf
+++ b/configs/supervisor/worker.conf
@@ -1,6 +1,6 @@
-[program:hello]
-command = /webapps/hello_django/bin/gunicorn_start                    ; Command to start app
-user = hello                                                          ; User to run as
-stdout_logfile = /webapps/hello_django/logs/gunicorn_supervisor.log   ; Where to write log messages
-redirect_stderr = true                                                ; Save stderr in the same log
-environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8                       ; Set UTF-8 as default encoding
+[program:worker]
+command = /bin/bash /home/manto/sensait/sensait_django/configs/supervisor/worker.sh  ; Command to start app
+user = manto                                                             ; User to run as
+stdout_logfile = /home/manto/sensait/logs/daphne_supervisor.log          ; Where to write log messages
+redirect_stderr = true                                                   ; Save stderr in the same log
+environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8                          ; Set UTF-8 as default encoding
