--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-asgi-redis==1.0.0
-asgiref==1.0.0
-autobahn==0.16.1
-channels==0.17.3
+appdirs==1.4.3
+asgi-redis==1.3.0
+asgiref==1.1.1
+attrs==16.3.0
+autobahn==0.18.2
+Automat==0.5.0
+channels==1.1.3
 constantly==15.1.0
-daphne==0.15.0
-Django==1.9.5
+daphne==1.2.0
+Django==1.11
 django-bootstrap-form==3.2.1
 django-cors-headers==1.1.0
 django-markdown-deux==1.0.5
@@ -14,21 +17,26 @@ django-widget-tweaks==1.4.1
 djangorestframework==3.3.3
 drf-nested-routers==0.11.1
 email-reply-parser==0.3.0
+future==0.16.0
 gevent==1.1.1
 greenlet==0.4.9
 incremental==16.10.1
 Markdown==2.6.6
 markdown2==2.3.1
 msgpack-python==0.4.8
+ordered-set==2.0.1
+packaging==16.8
 Pillow==3.3.0
 psycopg2==2.6.2
-pytz==2016.4
+PyLaTeX==1.1.1
+pyparsing==2.2.0
+pytz==2017.2
 redis==2.10.5
 reportlab==3.3.0
 simplejson==3.8.2
 six==1.10.0
-Twisted==16.5.0
-txaio==2.5.2
+Twisted==17.1.0
+txaio==2.7.0
 wsaccel==0.6.2
 xlwt==1.1.2
-zope.interface==4.3.2
+zope.interface==4.4.0
